# Labs

lab1/: CMakeLists.txt  Lab1.cpp
p2/: CMakeLists.txt
p2/p2/: CMakeLists.txt  p2.cpp  p2.h
